<resources>
    <string name="app_name" translatable="false">Ahmet Türk</string>
    <string name="email_address">E-posta Adresi</string>
    <string name="password">Parola</string>
    <string name="login_title" translatable="false">Definex Android\nCase Study</string>
    <string name="login">GİRİŞ</string>
    <string name="facebook">FACEBOOK</string>
    <string name="twitter">TWITTER</string>
    <string name="i_forgot_my_pass">PAROLAMI UNUTTUM</string>
    <string name="discover">Keşfet</string>
    <string name="book">Kitap</string>
    <string name="cart">Sepet</string>
    <string name="tag">Etiket</string>
    <string name="settings">Ayarlar</string>
    <string name="home">Ana Sayfa</string>
</resources>