<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/mainFragment"
        android:enabled="true"
        android:icon="@drawable/ic_shopping"
        android:title="@string/discover" />
    <item
        android:id="@+id/bookFragment"
        android:enabled="true"
        android:icon="@drawable/ic_book"
        android:title="@string/book" />
    <item
        android:id="@+id/cartFragment"
        android:enabled="true"
        android:icon="@drawable/ic_cart"
        android:title="@string/cart" />
    <item
        android:id="@+id/tagFragment"
        android:enabled="true"
        android:icon="@drawable/ic_tag"
        android:title="@string/tag" />
    <item
        android:id="@+id/settingsFragment"
        android:enabled="true"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
</menu>