<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:hint="@string/email_address"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/text_input_box_stroke_color"
        app:endIconDrawable="@drawable/ic_email"
        app:endIconMode="custom"
        app:endIconTint="@color/text_input_end_icon_tint"
        app:hintTextColor="@color/textInputText"
        app:layout_constraintBottom_toTopOf="@id/passwordTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/password"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxStrokeColor="@color/text_input_box_stroke_color"
        app:endIconDrawable="@drawable/ic_lock"
        app:endIconMode="custom"
        app:endIconTint="@color/text_input_end_icon_tint"
        app:hintTextColor="@color/textInputText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailTextField">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_black"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textColor="@color/accent"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/emailTextField"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="42dp"
        android:background="@drawable/bg_green_gradient"
        android:text="@string/login"
        android:textColor="@color/loginButtonText"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/forgotPasswordButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/facebookButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/facebook"
        app:backgroundTint="#3B5999"
        app:icon="@drawable/ic_facebook"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/twitterButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/twitterButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twitter"
        app:backgroundTint="#55ACEE"
        app:icon="@drawable/ic_twitter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/facebookButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgotPasswordButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginBottom="16dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/i_forgot_my_pass"
        android:textColor="@color/textInputText"
        android:textSize="11sp"
        android:textStyle="bold"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@id/facebookButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/forgetPasswordStroke"
        app:strokeWidth="1dp" />

    <View
        android:id="@+id/dottedLine"
        android:layout_width="50dp"
        android:layout_height="2dp"
        android:background="@drawable/dotted_line"
        app:layout_constraintBottom_toBottomOf="@id/forgotPasswordButton"
        app:layout_constraintEnd_toStartOf="@id/forgotPasswordButton"
        app:layout_constraintTop_toTopOf="@id/forgotPasswordButton" />

    <View
        android:id="@+id/dottedLineTwo"
        android:layout_width="50dp"
        android:layout_height="2dp"
        android:background="@drawable/dotted_line"
        app:layout_constraintBottom_toBottomOf="@id/forgotPasswordButton"
        app:layout_constraintStart_toEndOf="@id/forgotPasswordButton"
        app:layout_constraintTop_toTopOf="@id/forgotPasswordButton" />

</androidx.constraintlayout.widget.ConstraintLayout>